tests/tests/Other_tests/tests-Init-01-Ret-01-05_Ret_UnaffectedCharInMain/pld-compile.txt
Error in input.c.
Error variable c is not defined. On position 5:8
   "	return c;"
            ^

1 error generated.

return code: 1
